# Esercizi_PCS_2026

./: File_Prova.txt
esercitazione1/: CMakeLists.txt  Medie_Temperature.cpp  NOTE PERSONALI  -  ESERCITAZIONE_1.txt  printargs.cpp
esercitazione10/: CMakeLists.txt  Gradiente_Coniugato.hpp  Test_Gradiente_Coniugato.cpp
esercitazione10/Build_Es_10/: CMakeCache.txt  Makefile  cmake_install.cmake  gconj_test
esercitazione2/: CMakeLists.txt  NOTE PERSONALI ESERCITAZIONE_2.txt  Positioning.cpp  Primi_Algoritmi.cpp  Primi_Algoritmi_prog
esercitazione3/: CMakeLists.txt  Implementazione_Razionali.hpp  (+2 more)
esercitazione5/: CMakeLists.txt  Dichiarazione IA.txt  Execution_Time.cpp  Osservazioni sul Grafico e sull'output.txt  Sorting_Algorithm.hpp  Testing_InsertionSort.cpp  Testing_MergeSort.cpp  Testing_NewQuickSort.cpp  Testing_QuickSort.cpp
esercitazione5/Build_Debug_Es_5/: CMakeCache.txt  Makefile  cmake_install.cmake  measure_sorts  test_bubblesort  test_insertionsort  test_mergesort  test_newquicksort  test_quicksort  test_selectionsort
esercitazione5/Build_Es_5/: CMakeCache.txt  Makefile  cmake_install.cmake  measure_sorts  test_bubblesort  test_mergesort  test_quicksort  test_selectionsort
esercitazione5/Build_Release_Es_5/: CMakeCache.txt  Makefile  cmake_install.cmake  measure_sorts  test_bubblesort  test_insertionsort  test_mergesort  test_newquicksort  test_quicksort  test_selectionsort
esercitazione5/MatLab/: Grafico.fig  Script.m
esercitazione5/Matlab_Ottimo/Debug/: Grafico.fig  Script.m
esercitazione5/Matlab_Ottimo/Release/: Grafico.fig  Script.m
(+45 files in other folders)
