cmake_minimum_required(VERSION 3.20)
project(esercitazione10) 

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -Werror=vla -Wno-sign-compare")

find_package(Eigen3 CONFIG REQUIRED)
list(APPEND libraries_list PUBLIC Eigen3::Eigen)

add_executable(gconj_test Test_Gradiente_Coniugato.cpp)
target_link_libraries(gconj_test ${libraries_list})
